--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/*@media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+}*/
 
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,6 +24,9 @@
   color: white;
 }
 
+.App-header .text {
+  color: black;
+}
 .App-link {
   color: #61dafb;
 }
