--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,20 @@
     box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Poppins';
+  src: url('./assets/Poppins-Light.ttf') format('truetype');
+}
+
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.App {
+  display: flex;
 }
