--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+:root {
+  --pink: #011; /*#FF175B*/
+  --red: #C11849; /*#C11849*/
+  --darkred: #9A143B; /*#9A143B*/
+  --wine: #022; /*#660C27*/
+  --darkwine: #022; /*#49081B*/
+  --beige: #011; /*#B59AA2*/
+  --darkbeige: #FF175B; /*#A1818A*/
+  --white: #ffffff; /*#ffffff*/
+  --gray: #949494; /*#949494*/
+  --darkgray: #3A3A3A; /*#3A3A3A*/
+  --black: #000000; /*#000000*/
+}
+
 * {
     box-sizing: border-box;
 }
