update address flow updated

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,12 @@
 
 :root {
   --pink: #011; /*#FF175B*/
-  --red: #C11849; /*#C11849*/
+  --red: #011; /*#C11849*/
   --darkred: #9A143B; /*#9A143B*/
   --wine: #022; /*#660C27*/
   --darkwine: #022; /*#49081B*/
   --beige: #011; /*#B59AA2*/
-  --darkbeige: #FF175B; /*#A1818A*/
+  --darkbeige: #011; /*#A1818A*/
   --white: #ffffff; /*#ffffff*/
   --gray: #949494; /*#949494*/
   --darkgray: #3A3A3A; /*#3A3A3A*/
